# cyclesphi-TH2

./: README.md
scripts/: build_blender33.sh  build_cyclesphi33_cpu.sh  build_cyclesphi33_gpu.sh  build_cyclesphi33_gpu_unimem_credit.sh  build_cyclesphi33_gpu_unimem_rr.sh  download_benchmarks.sh  download_blender.sh  run_blender_post.sh  run_blender_pre.sh  run_cyclesphi33_cpu.sh  run_cyclesphi33_gpu.sh  run_cyclesphi33_gpu_unimem_credit.sh  run_cyclesphi33_gpu_unimem_rr.sh  run_lib.sh
src/cyclesphi/: CMakeLists.txt  README.md
src/cyclesphi/build_files/cmake/platform/: platform_win32.cmake
src/cyclesphi/client/: CMakeLists.txt
src/cyclesphi/client/api/: client_api.h
src/cyclesphi/client/blender_client/: CMakeLists.txt  blender_client.cpp  cyclephi-git.code-workspace
src/cyclesphi/client/blenlib/: CMakeLists.txt  math_base_inline.cpp  math_matrix.cpp  math_rotation.cpp  math_vector.cpp
src/cyclesphi/client/cycles/: CMakeLists.txt  cyclephi-git.code-workspace  cycles_client.cpp  cycles_client.h  kernel_camera.cpp  kernel_camera.h  kernel_cuda.h  kernel_cuda_stat.cpp  kernel_cuda_stat.h  kernel_cuda_stream.cpp  kernel_cuda_util.cpp  kernel_cuda_util.h  kernel_denoiser.cpp  kernel_denoiser.h  kernel_omp.cpp  kernel_omp.h  kernel_optix.cpp  kernel_optix.h  kernel_util.cpp  kernel_util.h
src/cyclesphi/client/cycles_cuda/: CMakeLists.txt
src/cyclesphi/client/cycles_optix/: CMakeLists.txt
src/cyclesphi/client/data/: over.py
src/cyclesphi/client/renderengine/addon/cyclesphi/: __init__.py
src/cyclesphi/client/renderengine/src/: CMakeLists.txt  cyclesphi.cpp  cyclesphi.h  cyclesphi_api.h  cyclesphi_data.h  cyclesphi_vrg.cpp
src/cyclesphi/client/scripts/: build_blender33.sh  build_cyclesphi33_cpu.sh  build_cyclesphi33_gpu.sh  build_cyclesphi33_gpu_unimem_credit.sh  build_cyclesphi33_gpu_unimem_rr.sh  download_lib.sh  run_blender_post.sh  run_blender_pre.sh  run_cyclesphi33_cpu.sh  run_cyclesphi33_gpu.sh  run_cyclesphi33_gpu_unimem_credit.sh  run_cyclesphi33_gpu_unimem_rr.sh
src/cyclesphi/intern/cycles/blender/: CMakeLists.txt  camera.cpp  device.cpp  object.cpp  python.cpp  shader.cpp  sync.cpp  sync.h
src/cyclesphi/intern/cycles/blender/addon/: engine.py  presets.py  properties.py  ui.py
src/cyclesphi/intern/cycles/device/: CMakeLists.txt  denoise.cpp  denoise.h  device.cpp  device.h  kernel.cpp  memory.cpp  memory.h  queue.cpp  queue.h
src/cyclesphi/intern/cycles/device/client/: device.cpp  device.h  device_impl.cpp  device_impl.h  queue.cpp  queue.h
src/cyclesphi/intern/cycles/device/cpu/: device_impl.cpp  device_impl.h  kernel.cpp  kernel.h  kernel_function.h  kernel_thread_globals.cpp  kernel_thread_globals.h
src/cyclesphi/intern/cycles/device/cuda/: device_impl.cpp  device_impl.h  kernel.cpp  kernel.h  queue.cpp  queue.h  util.cpp  util.h
src/cyclesphi/intern/cycles/device/hip/: device_impl.cpp  device_impl.h  kernel.cpp  kernel.h  queue.cpp  queue.h  util.cpp  util.h
src/cyclesphi/intern/cycles/device/optix/: device_impl.cpp  device_impl.h  queue.cpp  util.h
src/cyclesphi/intern/cycles/graph/: CMakeLists.txt  node_enum.h
src/cyclesphi/intern/cycles/integrator/: CMakeLists.txt  pass_accessor.cpp  pass_accessor.h  pass_accessor_cpu.cpp  pass_accessor_cpu.h  pass_accessor_gpu.cpp  path_trace.cpp  path_trace_work.cpp  path_trace_work.h  path_trace_work_client.cpp  path_trace_work_client.h  path_trace_work_cpu.cpp  path_trace_work_cpu.h  path_trace_work_gpu.cpp  path_trace_work_gpu.h  render_scheduler.cpp  render_scheduler.h  shader_eval.cpp  work_tile_scheduler.cpp  work_tile_scheduler.h
src/cyclesphi/intern/cycles/kernel/: CMakeLists.txt  data_arrays.h  data_template.h  types.h
src/cyclesphi/intern/cycles/kernel/device/client/: kernel_client.cpp  kernel_client.h  kernel_file.cpp  kernel_file.h  kernel_file_miniscene.cpp  kernel_file_miniscene.h  kernel_mpi.cpp  kernel_mpi.h  kernel_socket.cpp  kernel_socket.h  kernel_tcp.cpp  kernel_tcp.h
src/cyclesphi/intern/cycles/kernel/device/cpu/: compat.h  globals.h  image.h  kernel_arch.h  kernel_arch_impl.h
src/cyclesphi/intern/cycles/kernel/device/cuda/: globals.h  kernel.cu
src/cyclesphi/intern/cycles/kernel/device/gpu/: kernel.h
src/cyclesphi/intern/cycles/kernel/device/hip/: globals.h  kernel.cpp
src/cyclesphi/intern/cycles/kernel/integrator/: path_state.h  shade_surface.h  shade_volume.h
src/cyclesphi/intern/cycles/kernel/svm/: sky.h
src/cyclesphi/intern/cycles/kernel/util/: profiling.h
src/cyclesphi/intern/cycles/scene/: CMakeLists.txt  camera.h  film.h  geometry.cpp  integrator.cpp  integrator.h  object.cpp  pass.cpp  pass.h  scene.cpp  scene.h  shader.cpp  shader.h  volume.cpp
src/cyclesphi/intern/cycles/session/: buffers.cpp  buffers.h
src/cyclesphi/intern/cycles/util/: string.cpp  string.h  task.h  texture.h  thread.h  transform.h
src/cyclesphi/release/scripts/addons/: curve_assign_shapekey.py
src/cyclesphi/release/scripts/startup/bl_ui/: properties_particle.py  space_outliner.py
src/cyclesphi/source/blender/blenkernel/intern/: image.cc  object_dupli.cc  particle_system.c
src/cyclesphi/source/blender/editors/physics/: particle_edit.c  physics_intern.h  physics_ops.c
src/cyclesphi/source/blender/editors/space_outliner/: outliner_edit.cc  outliner_intern.hh  outliner_ops.cc
src/cyclesphi/source/blender/makesdna/: DNA_particle_types.h  DNA_scene_types.h
src/cyclesphi/source/blender/makesrna/intern/: rna_camera.c  rna_particle.c  rna_scene.c
src/cyclesphi/source/blender/windowmanager/: CMakeLists.txt
src/cyclesphi/source/blender/windowmanager/intern/: wm_init_exit.c
src/cyclesphi/source/creator/: CMakeLists.txt  creator.c
testmpi/: mpi_gather  mpi_gather_test  mpi_gather_test.cpp  mpitest  mpitest.cpp
